src/parser/ANTLRv4Parser.ts
// Generated from grammars/ANTLRv4Parser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { ANTLRv4ParserListener } from "./ANTLRv4ParserListener.js";
import { ANTLRv4ParserVisitor } from "./ANTLRv4ParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class ANTLRv4Parser extends antlr.Parser {
    public static readonly TOKEN_REF = 1;
    public static readonly RULE_REF = 2;
    public static readonly LEXER_CHAR_SET = 3;
    public static readonly DOC_COMMENT = 4;
    public static readonly BLOCK_COMMENT = 5;
    public static readonly LINE_COMMENT = 6;
    public static readonly INT = 7;
    public static readonly STRING_LITERAL = 8;
    public static readonly UNTERMINATED_STRING_LITERAL = 9;
    public static readonly BEGIN_ARGUMENT = 10;
    public static readonly BEGIN_ACTION = 11;
    public static readonly OPTIONS = 12;
    public static readonly TOKENS = 13;
    public static readonly CHANNELS = 14;
    public static readonly IMPORT = 15;
    public static readonly FRAGMENT = 16;
    public static readonly LEXER = 17;
    public static readonly PARSER = 18;
    public static readonly GRAMMAR = 19;
    public static readonly PROTECTED = 20;
    public static readonly PUBLIC = 21;
    public static readonly PRIVATE = 22;
    public static readonly RETURNS = 23;
    public static readonly LOCALS = 24;
    public static readonly THROWS = 25;
    public static readonly CATCH = 26;
    public static readonly FINALLY = 27;
    public static readonly MODE = 28;
    public static readonly COLON = 29;
    public static readonly COLONCOLON = 30;
    public static readonly COMMA = 31;
    public static readonly SEMI = 32;
    public static readonly LPAREN = 33;
    public static readonly RPAREN = 34;
    public static readonly LBRACE = 35;
    public static readonly RBRACE = 36;
    public static readonly RARROW = 37;
    public static readonly LT = 38;
    public static readonly GT = 39;
    public static readonly ASSIGN = 40;
    public static readonly QUESTION = 41;
    public static readonly STAR = 42;
    public static readonly PLUS_ASSIGN = 43;
    public static readonly PLUS = 44;
    public static readonly OR = 45;
    public static readonly DOLLAR = 46;
    public static readonly RANGE = 47;
    public static readonly DOT = 48;
    public static readonly AT = 49;
    public static readonly POUND = 50;
    public static readonly NOT = 51;
    public static readonly ID = 52;
    public static readonly WS = 53;
    public static readonly ERRCHAR = 54;
    public static readonly END_ARGUMENT = 55;
    public static readonly UNTERMINATED_ARGUMENT = 56;
    public static readonly ARGUMENT_CONTENT = 57;
    public static readonly END_ACTION = 58;
    public static readonly UNTERMINATED_ACTION = 59;
    public static readonly ACTION_CONTENT = 60;
    public static readonly UNTERMINATED_CHAR_SET = 61;
    public static readonly RULE_grammarSpec = 0;
    public static readonly RULE_grammarDecl = 1;
    public static readonly RULE_grammarType = 2;
    public static readonly RULE_prequelConstruct = 3;
    public static readonly RULE_optionsSpec = 4;
    public static readonly RULE_option = 5;
    public static readonly RULE_optionValue = 6;
    public static readonly RULE_delegateGrammars = 7;
    public static readonly RULE_delegateGrammar = 8;
    public static readonly RULE_tokensSpec = 9;
    public static readonly RULE_channelsSpec = 10;
    public static readonly RULE_idList = 11;
    public static readonly RULE_action_ = 12;
    public static readonly RULE_actionScopeName = 13;
    public static readonly RULE_actionBlock = 14;
    public static readonly RULE_argActionBlock = 15;
    public static readonly RULE_modeSpec = 16;
    public static readonly RULE_rules = 17;
    public static readonly RULE_ruleSpec = 18;
    public static readonly RULE_parserRuleSpec = 19;
    public static readonly RULE_exceptionGroup = 20;
    public static readonly RULE_exceptionHandler = 21;
    public static readonly RULE_finallyClause = 22;
    public static readonly RULE_rulePrequel = 23;
    public static readonly RULE_ruleReturns = 24;
    public static readonly RULE_throwsSpec = 25;
    public static readonly RULE_localsSpec = 26;
    public static readonly RULE_ruleAction = 27;
    public static readonly RULE_ruleModifiers = 28;
    public static readonly RULE_ruleModifier = 29;
    public static readonly RULE_ruleBlock = 30;
    public static readonly RULE_ruleAltList = 31;
    public static readonly RULE_labeledAlt = 32;
    public static readonly RULE_lexerRuleSpec = 33;
    public static readonly RULE_lexerRuleBlock = 34;
    public static readonly RULE_lexerAltList = 35;
    public static readonly RULE_lexerAlt = 36;
    public static readonly RULE_lexerElements = 37;
    public static readonly RULE_lexerElement = 38;
    public static readonly RULE_lexerBlock = 39;
    public static readonly RULE_lexerCommands = 40;
    public static readonly RULE_lexerCommand = 41;
    public static readonly RULE_lexerCommandName = 42;
    public static readonly RULE_lexerCommandExpr = 43;
    public static readonly RULE_altList = 44;
    public static readonly RULE_alternative = 45;
    public static readonly RULE_element = 46;
    public static readonly RULE_predicateOptions = 47;
    public static readonly RULE_predicateOption = 48;
    public static readonly RULE_labeledElement = 49;
    public static readonly RULE_ebnf = 50;
    public static readonly RULE_blockSuffix = 51;
    public static readonly RULE_ebnfSuffix = 52;
    public static readonly RULE_lexerAtom = 53;
    public static readonly RULE_atom = 54;
    public static readonly RULE_notSet = 55;
    public static readonly RULE_blockSet = 56;
    public static readonly RULE_setElement = 57;
    public static readonly RULE_block = 58;
    public static readonly RULE_ruleref = 59;
    public static readonly RULE_characterRange = 60;
    public static readonly RULE_terminalDef = 61;
    public static readonly RULE_elementOptions = 62;
    public static readonly RULE_elementOption = 63;
    public static readonly RULE_identifier = 64;

    public static readonly literalNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, "'import'", "'fragment'", "'lexer'", "'parser'", 
        "'grammar'", "'protected'", "'public'", "'private'", "'returns'", 
        "'locals'", "'throws'", "'catch'", "'finally'", "'mode'"
    ];

    public static readonly symbolicNames = [
        null, "TOKEN_REF", "RULE_REF", "LEXER_CHAR_SET", "DOC_COMMENT", 
        "BLOCK_COMMENT", "LINE_COMMENT", "INT", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
        "BEGIN_ARGUMENT", "BEGIN_ACTION", "OPTIONS", "TOKENS", "CHANNELS", 
        "IMPORT", "FRAGMENT", "LEXER", "PARSER", "GRAMMAR", "PROTECTED", 
        "PUBLIC", "PRIVATE", "RETURNS", "LOCALS", "THROWS", "CATCH", "FINALLY", 
        "MODE", "COLON", "COLONCOLON", "COMMA", "SEMI", "LPAREN", "RPAREN", 
        "LBRACE", "RBRACE", "RARROW", "LT", "GT", "ASSIGN", "QUESTION", 
        "STAR", "PLUS_ASSIGN", "PLUS", "OR", "DOLLAR", "RANGE", "DOT", "AT", 
        "POUND", "NOT", "ID", "WS", "ERRCHAR", "END_ARGUMENT", "UNTERMINATED_ARGUMENT", 
        "ARGUMENT_CONTENT", "END_ACTION", "UNTERMINATED_ACTION", "ACTION_CONTENT", 
        "UNTERMINATED_CHAR_SET"
    ];
    public static readonly ruleNames = [
        "grammarSpec", "grammarDecl", "grammarType", "prequelConstruct", 
        "optionsSpec", "option", "optionValue", "delegateGrammars", "delegateGrammar", 
        "tokensSpec", "channelsSpec", "idList", "action_", "actionScopeName", 
        "actionBlock", "argActionBlock", "modeSpec", "rules", "ruleSpec", 
        "parserRuleSpec", "exceptionGroup", "exceptionHandler", "finallyClause", 
        "rulePrequel", "ruleReturns", "throwsSpec", "localsSpec", "ruleAction", 
        "ruleModifiers", "ruleModifier", "ruleBlock", "ruleAltList", "labeledAlt", 
        "lexerRuleSpec", "lexerRuleBlock", "lexerAltList", "lexerAlt", "lexerElements", 
        "lexerElement", "lexerBlock", "lexerCommands", "lexerCommand", "lexerCommandName", 
        "lexerCommandExpr", "altList", "alternative", "element", "predicateOptions", 
        "predicateOption", "labeledElement", "ebnf", "blockSuffix", "ebnfSuffix", 
        "lexerAtom", "atom", "notSet", "blockSet", "setElement", "block", 
        "ruleref", "characterRange", "terminalDef", "elementOptions", "elementOption", 
        "identifier",
    ];

    public get grammarFileName(): string { return "ANTLRv4Parser.g4"; }
    public get literalNames(): (string | null)[] { return ANTLRv4Parser.literalNames; }
    public get symbolicNames(): (string | null)[] { return ANTLRv4Parser.symbolicNames; }
    public get ruleNames(): string[] { return ANTLRv4Parser.ruleNames; }
    public get serializedATN(): number[] { return ANTLRv4Parser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, ANTLRv4Parser._ATN, ANTLRv4Parser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public grammarSpec(): GrammarSpecContext {
        let localContext = new GrammarSpecContext(this.context, this.state);
        this.enterRule(localContext, 0, ANTLRv4Parser.RULE_grammarSpec);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 130;
            this.grammarDecl();
            this.state = 134;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 61440) !== 0) || _la === 49) {
                {
                {
                this.state = 131;
                this.prequelConstruct();
                }
                }
                this.state = 136;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 137;
            this.rules();
            this.state = 141;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 28) {
                {
                {
                this.state = 138;
                this.modeSpec();
                }
                }
                this.state = 143;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 144;
            this.match(ANTLRv4Parser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public grammarDecl(): GrammarDeclContext {
        let localContext = new GrammarDeclContext(this.context, this.state);
        this.enterRule(localContext, 2, ANTLRv4Parser.RULE_grammarDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 146;
            this.grammarType();
            this.state = 147;
            this.identifier();
            this.state = 148;
            this.match(ANTLRv4Parser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public grammarType(): GrammarTypeContext {
        let localContext = new GrammarTypeContext(this.context, this.state);
        this.enterRule(localContext, 4, ANTLRv4Parser.RULE_grammarType);
        try {
            this.state = 155;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ANTLRv4Parser.LEXER:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 150;
                this.match(ANTLRv4Parser.LEXER);
                this.state = 151;
                this.match(ANTLRv4Parser.GRAMMAR);
                }
                break;
            case ANTLRv4Parser.PARSER:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 152;
                this.match(ANTLRv4Parser.PARSER);
                this.state = 153;
                this.match(ANTLRv4Parser.GRAMMAR);
                }
                break;
            case ANTLRv4Parser.GRAMMAR:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 154;
                this.match(ANTLRv4Parser.GRAMMAR);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public prequelConstruct(): PrequelConstructContext {
        let localContext = new PrequelConstructContext(this.context, this.state);
        this.enterRule(localContext, 6, ANTLRv4Parser.RULE_prequelConstruct);
        try {
            this.state = 162;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ANTLRv4Parser.OPTIONS:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 157;
                this.optionsSpec();
                }
                break;
            case ANTLRv4Parser.IMPORT:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 158;
                this.delegateGrammars();
                }
                break;
            case ANTLRv4Parser.TOKENS:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 159;
                this.tokensSpec();
                }
                break;
            case ANTLRv4Parser.CHANNELS:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 160;
                this.channelsSpec();
                }
                break;
            case ANTLRv4Parser.AT:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 161;
                this.action_();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public optionsSpec(): OptionsSpecContext {
        let localContext = new OptionsSpecContext(this.context, this.state);
        this.enterRule(localContext, 8, ANTLRv4Parser.RULE_optionsSpec);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 164;
            this.match(ANTLRv4Parser.OPTIONS);
            this.state = 170;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 1 || _la === 2) {
                {
                {
                this.state = 165;
                this.option();
                this.state = 166;
                this.match(ANTLRv4Parser.SEMI);
                }
                }
                this.state = 172;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 173;
            this.match(ANTLRv4Parser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public option(): OptionContext {
        let localContext = new OptionContext(this.context, this.state);
        this.enterRule(localContext, 10, ANTLRv4Parser.RULE_option);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 175;
            this.identifier();
            this.state = 176;
            this.match(ANTLRv4Parser.ASSIGN);
            this.state = 177;
            this.optionValue();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public optionValue(): OptionValueContext {
        let localContext = new OptionValueContext(this.context, this.state);
        this.enterRule(localContext, 12, ANTLRv4Parser.RULE_optionValue);
        let _la: number;
        try {
            this.state = 190;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case ANTLRv4Parser.TOKEN_REF:
            case ANTLRv4Parser.RULE_REF:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 179;
                this.identifier();
                this.state = 184;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 48) {
                    {
                    {
                    this.state = 180;
                    this.match(ANTLRv4Parser.DOT);
                    this.state = 181;
                    this.identifier();
                    }
                    }
                    this.state = 186;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
                break;
            case ANTLRv4Parser.STRING_LITERAL:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 187;
                this.match(ANTLRv4Parser.STRING_LITERAL);
                }
                break;
            case ANTLRv4Parser.BEGIN_ACTION:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 188;
                this.actionBlock();
                }
                break;
            case ANTLRv4Parser.INT:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 189;
                this.match(ANTLRv4Parser.INT);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public delegateGrammars(): DelegateGrammarsContext {
        let localContext = new DelegateGrammarsContext(this.context, this.state);
        this.enterRule(localContext, 14, ANTLRv4Parser.RULE_delegateGrammars);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 192;
            this.match(ANTLRv4Parser.IMPORT);
            this.state = 193;
            this.delegateGrammar();
            this.state = 198;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 194;
                this.match(ANTLRv4Parser.COMMA);
                this.state = 195;
                this.delegateGrammar();
                }
                }
                this.state = 200;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 201;
            this.match(ANTLRv4Parser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public delegateGrammar(): DelegateGrammarContext {
        let localContext = new DelegateGrammarContext(this.context, this.state);
        this.enterRule(localContext, 16, ANTLRv4Parser.RULE_delegateGrammar);
        try {
            this.state = 208;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 8, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 203;
                this.identifier();
                this.state = 204;
                this.match(ANTLRv4Parser.ASSIGN);
                this.state = 205;
                this.identifier();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 207;
                this.identifier();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public tokensSpec(): TokensSpecContext {
        let localContext = new TokensSpecContext(this.context, this.state);
        this.enterRule(localContext, 18, ANTLRv4Parser.RULE_tokensSpec);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 210;
            this.match(ANTLRv4Parser.TOKENS);
            this.state = 212;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1 || _la === 2) {
                {
                this.state = 211;
                this.idList();
                }
            }

            this.state = 214;
            this.match(ANTLRv4Parser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public channelsSpec(): ChannelsSpecContext {
        let localContext = new ChannelsSpecContext(this.context, this.state);
        this.enterRule(localContext, 20, ANTLRv4Parser.RULE_channelsSpec);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 216;
            this.match(ANTLRv4Parser.CHANNELS);
            this.state = 218;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1 || _la === 2) {
                {
                this.state = 217;
                this.idList();
                }
            }

            this.state = 220;
            this.match(ANTLRv4Parser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public idList(): IdListContext {
        let localContext = new IdListContext(this.context, this.state);
        this.enterRule(localContext, 22, ANTLRv4Parser.RULE_idList);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 222;
            this.identifier();
            this.state = 227;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 11, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 223;
                    this.match(ANTLRv4Parser.COMMA);
                    this.state = 224;
                    this.identifier();
                    }
                    }
                }
                this.state = 229;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 11, this.context);
            }
            this.state = 231;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 230;
                this.match(ANTLRv4Parser.COMMA);
                }
            }
